feat: audio in peers panel. fixed useRemoteAudioTracks hook

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.flex-grow-row {
+  min-width: 0;
+}
+
+.flex-grow-col {
+  min-height: 0;
+}
